--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,167 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.app-container {
+  width: 1200px;
+  font-family: "Roboto", sans-serif;
+  margin: 0 auto;
+  padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.app-btn {
+  background: #02C39A;
+  display: inline-block;
+  color: #F0F3BD;
+  padding: 10px 40px;
+  font-size: 1.2em;
+  font-weight: 400;
+  cursor: pointer;
+  -webkit-transition: all .1s;
+  transition: all .1s;
 }
+
+.app-btn:hover {
+  background: #00A896;
+}
+
+.app-form {
+  width: 100%;
+  font-size: 0.9em;
+  position: relative;
+}
+
+.app-form-input-error {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 0.9em;
+  color: #ff6359;
+}
+
+.app-form-input {
+  position: relative;
+  width: 100%;
+}
+
+.app-form-input-label {
+  font-family: "Roboto", sans-serif;
+  position: absolute;
+  left: 20px;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  color: #464646;
+}
+
+input {
+  background: #fff;
+  border: none;
+  padding: 15px 20px 10px 20px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: #000;
+  width: calc(100% - 40px);
+  border-bottom: 0.5px solid #DEDEDC;
+  border-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  outline: none;
+  margin: 5px 0px;
+}
+
+input:focus {
+  background: #e2e2e2;
+}
+
+input:hover {
+  background: #e2e2e2;
+}
+
+.app-form-input-select {
+  background: #fff;
+  padding: 1px 20px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: #464646;
+  width: calc(100% - 40px);
+  border-bottom: 0.5px solid #DEDEDC;
+  border-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  outline: none;
+  margin: 5px 0px;
+  cursor: pointer;
+  position: relative;
+  min-width: 150px;
+}
+
+.app-form-input-select .input-select-label {
+  font-family: "Roboto", sans-serif;
+  position: absolute;
+  left: 20px;
+  top: -2px;
+  font-size: 0.7em;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  color: #272727;
+}
+
+.app-form-input-select:hover {
+  background: #e2e2e2;
+}
+
+.app-form-input-select .input-select-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.app-form-input-select .input-select-input .input-select-icon {
+  font-size: 2em;
+}
+
+.app-form-input-select .input-select-list {
+  position: absolute;
+  background: #f6f6f4;
+  width: calc(100% - 40px);
+  left: 0;
+  z-index: 9;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: none;
+  overflow: hidden;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.app-form-input-select .input-select-list .input-select-list-option {
+  padding: 5px 5px;
+}
+
+.app-form-input-select .input-select-list .input-select-list-option:hover {
+  background: #e2e2e2;
+}
+
+.app-builder-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 0 0 41px 10px rgba(0, 0, 0, 0.17);
+          box-shadow: 0 0 41px 10px rgba(0, 0, 0, 0.17);
+  padding: 20px;
+  border: 1px solid #e2e2e2;
+}
+
+.app-builder-container .form-input-container {
+  border: 1px solid #dfdfdf;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+/*# sourceMappingURL=index.css.map */
